# ComfyUI-SubjectBackgroundMotion

./: .gitignore  __init__.py  pyproject.toml  readme.md  requirements.txt
nodes/: curve_nodes.py  image_nodes.py  mask_nodes.py
utility/: vector_utilities.py
